--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,6 @@ branches:
 install:
   - npm install
 script:
-  - hexo clean
   - hexo generate
 after_script:
   # - git config user.name "bbcfive"
@@ -31,7 +30,7 @@ after_script:
   - git config user.email "bbcfive@163.com" 
   - git add .
   - git commit -m "Update docs"
-  - git push --force --quiet "https://${travisblog}@${GH_REF}" master:master
+  - git push --force --quiet "https://${travisblog}@${GH_REF}" 
 # 通知
 notifications:
   email:
