--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,7 @@ branches:
 install:
   - npm install
 script:
-  - npm run build
-  - npm run clean
-  - npm run deploy
+  - hexo generate
 after_script:
   # - git config user.name "bbcfive"
   # - git config user.email "bbcfive@163.com"
@@ -33,7 +31,9 @@ after_script:
   - git add .
   - git commit -m "Update docs"
   - git push --force --quiet "https://${travisblog}@${GH_REF}" 
-
+  - npm run build
+  - npm run clean
+  - npm run deploy
 # 通知
 notifications:
   email:
