--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ after_script:
   # - git config user.name "bbcfive"
   # - git config user.email "bbcfive@163.com"
   # - sed -i "s/{travisblog}/${travisblog}/g" ./_config.yml
-  # # - sed -i "s/{TENCENT_TOKEN}/${TENCENT_TOKEN}/g" ./_config.yml
+  # - sed -i "s/{TENCENT_TOKEN}/${TENCENT_TOKEN}/g" ./_config.yml
   # - hexo deploy
   - cd ./public
   - git init
@@ -30,8 +30,7 @@ after_script:
   - git config user.email "bbcfive@163.com" 
   - git add .
   - git commit -m "Update docs"
-  - git push --force --quiet "https://${travisblog}@${GH_REF}" 
-  - npm run deploy
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" 
 # 通知
 notifications:
   email:
@@ -42,3 +41,4 @@ notifications:
 env:
  global:
    - GH_REF: github.com/bbcfive/bbcfive-blog.git
+   - GH_TOKEN: mIZJ2bH5waB7dUY-qbRitw
