--- a/.travis.yml
+++ b/.travis.yml
@@ -18,20 +18,23 @@ install:
   - npm install hexo-cli -g
   - npm install
 script:
-  - hexo g
+  - hexo clean
+  - hexo generate
 after_script:
   # - git config user.name "bbcfive"
   # - git config user.email "bbcfive@163.com"
   # - sed -i "s/{travisblog}/${travisblog}/g" ./_config.yml
-  # - sed -i "s/{TENCENT_TOKEN}/${TENCENT_TOKEN}/g" ./_config.yml
   # - hexo deploy
-  - cd ./public
-  - git init
+  # - cd ./public
+  # - git init
+  # - git add .
+  # - git commit -m "Update docs"
+  # - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
   - git config user.name "bbcfive" 
   - git config user.email "bbcfive@163.com" 
-  - git add .
-  - git commit -m "Update docs"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+  - sed -i "s/gh_token/${travisblog}/g" ./_config.yml
+  - hexo deploy
+
 # 通知
 notifications:
   email:
