--- a/.travis.yml
+++ b/.travis.yml
@@ -20,15 +20,15 @@ install:
 script:
   - hexo generate
 after_script:
-  # - git config user.name "bbcfive"
-  # - git config user.email "bbcfive@163.com"
-  # - sed -i "s/{travisblog}/${travisblog}/g" ./_config.yml
-  # - hexo deploy
-  # - cd ./public
-  # - git init
-  # - git add .
-  # - git commit -m "Update docs"
-  # - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+  - git config user.name "bbcfive"
+  - git config user.email "bbcfive@163.com"
+  - sed -i "s/{travisblog}/${travisblog}/g" ./_config.yml
+  - hexo deploy
+  - cd ./public
+  - git init
+  - git add .
+  - git commit -m "Update docs"
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
   - git config user.name "bbcfive" 
   - git config user.email "bbcfive@163.com" 
   - sed -i "s/gh_token/${travisblog}/g" ./_config.yml
