--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ install:
 script: 
   - git config user.name "bbcfive"
   - git config user.email "bbcfive@163.com"
+  - git config user.password $password
   - yarn run build
-  - yarn run clean
   - yarn run deploy
 
 deploy:
