--- a/_config.yml
+++ b/_config.yml
@@ -99,5 +99,5 @@ theme: hexo-theme-huhu # book # landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repository: https://gh_token@github.com/bbcfive/bbcfive.github.io.git
+  repository: git@github.com/bbcfive/bbcfive.github.io.git
   branch: master
