--- a/_config.yml
+++ b/_config.yml
@@ -3,11 +3,11 @@
 ## Source: https://github.com/hexojs/hexo/
 
 # Site
-title: 执白的博客
+title: bbcfive
 subtitle: ''
 description: ''
 keywords:
-author: 执白 # John Doe
+author: bbcfive
 language: zh-CN # en
 timezone: ''
 
